--- a/project_custom/views/view_task_form2.xml
+++ b/project_custom/views/view_task_form2.xml
@@ -24,7 +24,7 @@
                 <field name="planned_hours" widget="float_time"/>
                 <field name="real_planned" widget="float_time"/>
                 <field name="progress" widget="progressbar"/>
-                <field name="check_user"/>
+                <field name="check_user" invisible="1"/>
             </xpath>
 
             <xpath expr="//field[@name='user_ids']" position="attributes">
